--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -78,6 +78,59 @@ form.aria-label {
   margin-left: 738px;
 }
 
+
+/*modal*/
+
+.modal-involve{
+  margin: 0 auto;
+  padding: 40px;
+}
+
+.modal{
+    display: none;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+.modal__bg{
+    background: rgba(0,0,0,0.8);
+    height: 100vh;
+    position: absolute;
+    width: 100%;
+}
+.modal__content{
+    background: #fff;
+    left: 50%;
+    padding: 40px;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    width: 60%;
+}
+
+.modal-involve {
+  position: relative;
+  display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 300px;
+   height: 20px;
+   background-color: #99FF99;
+   transition: background-color .2s ease-in-out;
+   cursor: pointer;
+}
+
+.js-modal-open span{
+  color: #fff;
+  font-size: 13px;
+  font-weight: 700;
+}
+
+.material-icons {
+  margin-bottom: -5px;
+}
+
 /*show*/
 .show{
   max-width: 600px;
