--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,7 @@
 <%= render 'shared/flash_messages' %>
  <br>
 <%= render "shared/search_park" %>
-
-<div class="tag-index">
-  <% @tags.each do |tag| %>
-     <%= link_to "#{tag.name}(#{tag.taggings_count})", tag_path(tag.name), class: "label label-default" %>
-  <% end %>
-</div>
-<div class="map-index">
-  <iframe src="https://www.google.com/maps/d/embed?mid=19AFTeknmIahUpgetKNOFbHfPjDuoeEoV&z=12" width="800" height="480"></iframe>
-</div>
+<%= render "shared/modal" %>
 
 <div class="container">
   <div class="row">
