--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -82,8 +82,17 @@ form.aria-label {
 /*modal*/
 
 .modal-involve{
+  display: block;
+  background: linear-gradient(to right, #00FF00 0%, #00FF00 50%, #009900 50%, #009900 0%);
   margin: 0 auto;
-  padding: 40px;
+  width: 300px;
+  height: 60px;
+  border-radius: 40px;
+}
+
+.modal-involve a {
+  font-size: 14px;
+  color: #FFFFFF;
 }
 
 .modal{
