--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -1,6 +1,6 @@
 <div class="modal-involve">
-  <a class="js-modal-open" href="" data-target="modal01"><span style=”margin-right: 32px;”><i class="fa fa-map"></i> 地図で探す</a>&emsp;
-  <a class="js-modal-open" href="" data-target="modal02"><span style=”margin-right: 32px;”># 条件で探す</a>
+  <a class="js-modal-open" href="" data-target="modal01"><i class="fa fa-map"></i> 地図で探す&emsp; </a>
+  <a class="js-modal-open" href="" data-target="modal02">&emsp; # 条件で探す</a>
 </div>
 
 <div id="modal01" class="modal js-modal">
