--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -48,12 +48,12 @@
 /*show*/
 
 .show-image img {
+  text-align: center;
   width: 80px;
   height: 80px;
   border-radius: 40%;
   box-shadow: 0 2px 6px #c1ced7;
-  margin: 20px 0 10px;
-  object-fit: cover;
+  margin: 20px 425px;
 }
 
 .user-content {
