--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -64,17 +64,15 @@
     </div>
   </div>
   <br>
-  <div id="comment-post-<%= @post.id.to_s %>">
-    <%= render 'comment_list', { post: @post } %>
-  </div>
-
-  <hr>
   <div class="row actions" id="comment-form-post-<%= @post.id.to_s %>">
     <%= form_with model: [@post, Comment.new], class: "w-100" do |f| %>
       <%= f.hidden_field :user_id, value: current_user.id %>
       <%= f.hidden_field :post_id, value: @post.id %>
-      <%= f.text_field :comment, class: "form-control comment-input border-0", placeholder: "レビュー ...", autocomplete: :off %>
+      <%= f.text_field :comment, class: "form-control comment-input border-0", placeholder: "レビューする ...", autocomplete: :off %>
     <% end %>
+  </div>
+  <div id="comment-post-<%= @post.id.to_s %>">
+    <%= render 'comment_list', { post: @post } %>
   </div>
 
    <br>
