--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -13,30 +13,30 @@
       </div>
 
       <ul class="user-tabs">
-        <li class="active"><%= link_to("「レビュー」した公園", "/users/#{@user.id}") %></li>
+        <li class="active"><%= link_to("レビューした公園", "/users/#{@user.id}") %></li>
         <li class="active"><%= link_to("「いいね！」した公園", "/users/#{@user.id}/likes") %></li>
        </ul>
 
-        <% @user.comments.each do |comment| %>
+        <% @likes.each do |like| %>
+          <% post = Post.find_by(id: like.post_id) %>
           <div class="posts-index-item">
             <div class="post-left">
-              <%= image_tag comment.post.image.to_s %>
+              <%= image_tag post.image.to_s %>
             </div>
             <div class="post-right">
-            <div class="post-user-name">
-              <%= link_to(comment.comment, "/posts/#{comment.post.id}") %>
+              <%= link_to(post.park, "/posts/#{post.id}") %>
             </div>
           </div>
         <% end %>
 
+      </div>
 
-</div>
 
-<br>
-<hr>
-<br>
+      <br>
+      <hr>
+      <br>
 
-<div class="show-index">
-  <a class="btn btn-outline-info" href="/posts" role="button">公園一覧へ</a>
-</div>
-<br>
+      <div class="show-index">
+      <a class="btn btn-outline-info" href="/posts" role="button">公園一覧へ</a>
+      </div>
+      <br>
