--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,6 +35,12 @@ header {
   opacity: 0.5;
 }
 
+.header-menus :hover {
+  display: inline-block;
+  text-decoration: none;
+  color: #FF99CC;
+}
+
 .header-logo {
   font-family: Pacifico, sans-serif;
   font-size: 50px;
